# Fouko

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md
src/: commands.rs  main.rs
