[package]
name = "foukobot"
version = "0.1.0-alpha.1"
edition = "2021"
rust-version = "1.75"
authors = ["Fouko <mail@fouko.xyz>"]
description = "Reference cross-platform bot built on FoukoApi. Runs the same codebase on Telegram and Discord with shared profile, XP, coins and linked accounts."
license = "MIT"
repository = "https://github.com/FoukoDev/Fouko"
homepage = "https://bot.fouko.xyz"
readme = "README.md"
keywords = ["bot", "telegram", "discord", "chat", "foukoapi"]
categories = ["command-line-utilities"]
# FoukoBot is the reference application, not a library — users should
# deploy their own fork or use it as a template rather than depend on it.
publish = false

[dependencies]
# FoukoApi is pulled straight from crates.io. If you want to hack on both
# crates side-by-side, swap this line for a path dependency:
#     foukoapi = { path = "../FoukoApi", features = ["telegram", "discord", "sqlite"] }
foukoapi = { version = "0.1.0-alpha.1", features = ["telegram", "discord", "sqlite"] }

tokio = { version = "1.40", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
rand = "0.8"
chrono = { version = "0.4", features = ["clock"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "debuginfo"
